[package]
name = "rrule"
description = "A pure Rust implementation of recurrence rules as defined in the iCalendar RFC."
license = "MIT"
version = "0.5.7"
documentation = "https://docs.rs/rrule"
repository = "https://github.com/fmeringdal/rust_rrule"
authors = ["Fredrik Meringdal"]
edition = "2018"

keywords = ["calendar", "rrule", "ical"]
categories = ["date-and-time"]

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.5.3"
lazy_static = "1.4.0"
regex = "1.4.1"
serde = {version = "1.0", features = ["derive"]}