[package]
name = "rrule-afl-fuzz"
version = "0.1.0"
edition = "2021"
authors = ["Ralph Bisschops <ralph.bisschops.dev@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "*"
chrono = "0.4.19"
chrono-tz = "0.6.0"
num-traits = "0.2.15"

[dependencies.rrule]
path = "../rrule"

[features]
default = []
by-easter = ["rrule/by-easter"]