[package]
name = "rrule-debugger"
version = "0.1.0"
authors = ["Ralph Bisschops <ralph.bisschops.dev@gmail.com>"]
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrule = { path = "../rrule" }
chrono = "0.4.19"
chrono-tz = "0.9.0"
clap = { version = "4.1.9", features = ["derive"] }
rrule-afl-fuzz = { version = "0.1.0", path = "../rrule-afl-fuzz" }
log = "0.4.16"
yansi = "0.5.1"

[features]
default = []

by-easter = ["rrule/by-easter"]
